force-app/main/default/objects/Admission_Path_Option__c/Admission_Path_Option__c.object-meta.xml
<CustomObject>
    <description>The supported options for an admission path.</description>
    <label>Admission Path Option</label>
    <nameField>
        <label>Admission Path Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admission Path Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>