force-app/main/default/objects/Admission_Path_Option__c/fields/Admission_Path__c.field-meta.xml
<CustomField>
    <fullName>Admission_Path__c</fullName>
    <label>Admission Path</label>
    <referenceTo>Admission_Path__c</referenceTo>
    <relationshipLabel>Admission Path Options</relationshipLabel>
    <relationshipName>Admission_Path_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>