force-app/main/default/objects/Admission_Path_Option__c/fields/Agreement_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Recognition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Recognition</label>
    <referenceTo>Agreement_Recognition__c</referenceTo>
    <relationshipLabel>Admission Path Options</relationshipLabel>
    <relationshipName>Admission_Path_Options</relationshipName>
    <type>Lookup</type>
</CustomField>